first draft of program

--- a/index.html
+++ b/index.html
@@ -263,33 +263,51 @@
         <br>
 
         <div class="section-title">
-          <h5><i>Coming soon...</i></h5>
+          <h2>Program</h2>
         </div>
-        <!-- ===================== December 4th ===================== -->
+        <!--
+        <p> We are working hard on the Brainhack Marseille 2024 program, but it's not ready yet. Let us know if you have any suggestions!</p>
+        <p>Please find bellow the program of the Brainhack event (timezone Paris UTC+1). If you want to add the following schedule to your own personal Google agenda, click on the "Save the dates" button and then click on the "+ Google agenda" located at the bottom right of your screen.</p>-->
         <!-- 
+        <div class="d-flex justify-content-center">
+          <a class="btn btn-warning btn-color"
+            href="https://calendar.google.com/calendar/embed?src=brainhack.marseille%40gmail.com&ctz=Europe%2FParis"
+            target="_blank">
+            <h4>SAVE THE DATES</h4>
+          </a>
+        </div>
+        -->
+        <div style="font-size: large; line-height: 2em;">
+          This year we shall have Trainings on the following topics:
+          <ul>
+            <li>Python for beginners</li>
+            <li>Version control using Datalad + BIDS</li>
+            <li>ViT (Vision Transformers) - a library combining transformers for image processing</li>
+            <li>Edge AI - for an overview of advances in AI and a few demonstrations</li>
+            <li>Introduction to Arduino</li>
+        </div>
+
         <div class="section-title">
-          <h3>Monday 4th December</h3>
+          <h3>Wednesday 27th November</h3>
         </div>
 
         <table class="table table-striped">
           <tbody>
             <tr>
-              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
-              <td class="table-primary"><b>Welcome to BrainHack Marseille 2023 (In-person/Online)</b>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-09h45</th>
+              <td class="table-primary"><b>Welcome to BrainHack Marseille 2024</b>
                 <ul>
-                  <li>09h30-09h45 - Welcoming breakfast</li>
-                  <li>09h45-10h00 - <b>Introduction to the event</b> <i> by Matthieu Gilson & David Meunier (Marseille),
-                      Ruggero Basanisi (Lucca) </i> </li>
+                  <li>09h30-09h30 - <b>Welcoming breakfast</b></li>
+                  <li>09h30-09h45 - <b>Introduction to the event</b></li>
                 </ul>
               </td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap" style="width: 10%">10h15-13h00</th>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h45-13h00</th>
               <td class="table-success"><b>Training session:</b>
                 <ul>
-                  <li>10h00-11h30 - <b>Python basic</b> <i> by Julien Caugant </i> </li>
-                  <li>11h30-13h00 - <b>Jupyter notebook / IA tools for machine learning </b> <i> by <a
-                        href="https://www.univ-amu.fr/fr/public/cedre"> CEDRE </a> team </i> </li>
+                  <li>09h45-11h45 - <b>Python for beginners</b></li>
+                  <li>11h45-13h00 - <b>Data Version Control + BIDS</b></li>
                 </ul>
               </td>
             </tr>
@@ -297,46 +315,44 @@
               <th scope="row" class="align-middle text-nowrap">13h00-14h00</th>
               <td class="table-danger"><b>Lunch Break</b></td>
             </tr>
-            <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-15h20</th>
-            <td class="table-primary"><b> Sharing expertise session</b>
+            <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-16h30</th>
+            <td class="table-success"><b>Training Session</b>
               <ul>
-                <li>14h00-14h40 - How to 'Git' on with a clean code <i> by Ruggero Basanisi (Lucca, IMT) </i> </li>
-                <li>14h40-15h20 - Programming, energy and environement, does 'green-coding' exist? <i> by Marmaduke
-                    Woodman, Julien Lefèvre, Nathan Lemmers, Manuel Mercier, Matthieu Gilson (AMU, INS, INT, Insa) </i>
-                </li>
+                <li>14h00-15h15 - <b>ViT (Vision Transformers) - a library combining transformers for
+                    image processing</b></li>
+                <li>15h15-16h30 - <b>Edge AI  - for an overview of advances in AI and a few demonstrations</b></li>
               </ul>
             </td>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">15h20-15h50</th>
+              <th scope="row" class="align-middle text-nowrap">16h30-16h55</th>
               <td class="table-danger"><b>Coffee Break</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">15h50-17h10</th>
+              <th scope="row" class="align-middle text-nowrap">16h55-18h10</th>
               <td class="table-success">
-                <b>Sharing expertise on opensource projects:</b>
+                <b>Training Session</b>
                 <ul>
-                  <li>15h50-16h30 - <b> </b> <i> <a href="https://www.fz-juelich.de/profile/hoffstaedter_f"> Felix
-                        Hoffstaedter (Julich)</a> </i> </li>
-                  <li>16h30-17h10 - <b> </b> <i> <a href="https://www.neuro.polymtl.ca/team/faculty/julien-cohen-adad">
-                        Julien Cohen-Adad (Montreal)</a> </i> </li>
+                  <li>16h55 - 18h10 - <b>Introduction to Arduino </b></li>
                 </ul>
               </td>
             </tr>
 
-            <th scope="row" class="align-middle text-nowrap" style="width: 10%">17h10-18h00</th>
-            <td class="table-primary"><b>Short projects presentations between Marseille and Lucca</b>
+            <th scope="row" class="align-middle text-nowrap" style="width: 10%">18h10-18h30</th>
+            <td class="table-primary"><b>Short projects presentations</b>
             </td>
             <tr>
 
             <tr>
-              <th scope="row" class="align-middle text-nowrap">18h00</th>
-              <td class="table-danger"><b>BHM social event! / Speed project dating </b></td>
+              <th scope="row" class="align-middle text-nowrap">18h30</th>
+              <td class="table-danger"><b>BHM social event!</b></td>
             </tr>
           </tbody>
         </table>
 
+        <br>
+
         <div class="section-title">
-          <h3>Tuesday 5th December</h3>
+          <h3>Thursday 28th November</h3>
         </div>
 
         <table class="table table-striped">
@@ -345,7 +361,7 @@
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-13h00</th>
               <td class="table-primary"><b>Project Work</b>
                 <ul>
-                  <li>09h00-09h30 - breakfast</li>
+                  <li>09h00-09h30 - Breakfast</li>
                 </ul>
               </td>
             </tr>
@@ -357,27 +373,31 @@
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-18h00</th>
               <td class="table-primary"><b>Project Work</b>
                 <ul>
-                  <li>17h00-17h30 - <b>Intermediate Project Presentations (Marseille/Lucca) </b> </li>
-                  <li>17h30-18h00 - <b>Open Science game</b> <i> Julien Caugant (Pouillon room) </i> </li>
+                  <li>17h00-18h00 - <b>Intermediate Project Presentations</b> </li>
+                  <!-- <li>17h30-18h00 - <b>Open Science game</b> <i> Julien Caugant (Pouillon room) </i> </li> -->
                 </ul>
               </td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">18h00-19h00</th>
-              <td class="table-success"><b> Round table on <a
-                    href="https://pbil.univ-lyon1.fr/members/tannier/usageright/"> UsageRight in Scientific Research</a>
+              <td class="table-success"><b> Round table Discussion
+                  <!-- <a href="https://pbil.univ-lyon1.fr/members/tannier/usageright/"></a> -->
                 </b>
                 <ul>
-                  <li>18h00-19h00 -<i> <a href="https://lbbe.univ-lyon1.fr/fr/annuaires-des-membres/tannier-eric"> Eric
-                        Tannier, Julien Lefèvre </i> </li>
+                  <li>18h00-19h00<i>
+                      <!-- <a href="https://lbbe.univ-lyon1.fr/fr/annuaires-des-membres/tannier-eric"> - Eric
+                        Tannier, Julien Lefèvre </a> -->
+                    </i> </li>
                 </ul>
               </td>
             </tr>
           </tbody>
         </table>
 
+        <br>
+
         <div class="section-title">
-          <h3>Wednesday 6th December</h3>
+          <h3>Friday 29th November</h3>
         </div>
 
         <table class="table table-striped">
@@ -386,7 +406,7 @@
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-13h00</th>
               <td class="table-primary"><b>Project Work</b>
                 <ul>
-                  <li>09h00-09h30 - breakfast</li>
+                  <li>09h00-09h30 - Breakfast</li>
                 </ul>
               </td>
             </tr>
@@ -402,7 +422,7 @@
             </td>
 
           </tbody>
-        </table> -->
+        </table>
 
     </section>
 
