--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
 
             <tr>
               <th scope="row" class="align-middle text-nowrap">18h30</th>
-              <td class="table-danger"><b>BHM social event!</b></td>
+              <td class="table-danger"><b>BHM social event with a collective intelligence game!</b></td>
+              <td class="table-danger"><b>(location: INT, 5th floor)</b></td>
             </tr>
           </tbody>
         </table>
