Refine prog; update contact info

--- a/index.html
+++ b/index.html
@@ -295,49 +295,50 @@
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-09h45</th>
               <td class="table-primary"><b>Welcome to BrainHack Marseille 2024</b>
+                <br>
+                <i>Location: Room 507, 5th floor, Bâtiment Pédagogique</i>
                 <ul>
-                  <li>09h00-09h30 - <b>Welcoming breakfast</b></li>
-                  <li>09h30-09h45 - <b>Introduction to the event</b></li>
+                  <li>09h00-09h30 - <b>Welcoming breakfast</b> (30 min)</li>
+                  <li>09h30-09h45 - <b>Introduction to the event</b> (15 min)</li>
                 </ul>
               </td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h45-13h00</th>
-              <td class="table-success"><b>Training session:</b>
+              <td class="table-success"><b>Training session 1</b>
                 <ul>
-                  <li>09h45-11h45 - <b>Python for beginners</b></li>
-                  <li>11h45-13h00 - <b>Data Version Control + BIDS</b></li>
+                  <li>09h45-11h45 - <b>Intoduction to Python programming</b> - <i>(Cyprien Dautrevaux &amp; Alexandre Lainé, INT, CRMBM)</i> - (2h00)</li>
+                  <li>11h45-13h00 - <b>Data Version Control using DataLad + BIDS</b> - <i>(Giorgio Marinato, INT, AMU)</i> - (1h15)</li>
                 </ul>
               </td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">13h00-14h00</th>
-              <td class="table-danger"><b>Lunch Break</b></td>
+              <td class="table-danger"><b>Lunch Break</b> (1h00)</td>
             </tr>
             <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-16h30</th>
-            <td class="table-success"><b>Training Session</b>
+            <td class="table-success"><b>Training Session 2</b>
               <ul>
-                <li>14h00-15h15 - <b>ViT (Vision Transformers) - a library combining transformers for
-                    image processing</b></li>
-                <li>15h15-16h30 - <b>Edge AI - for an overview of advances in AI and a few demonstrations</b></li>
+                <li>14h00-15h15 - <b>Edge AI - for an overview of advances in AI</b> - <i> (Zixuan Liu, CEDRE, AMU)</i> - (1h15)</li>
+                <li>15h15-16h30 - <b>ViT (Vision Transformers)</b> - <i> (Kourosh Gerayeli, CEDRE, AMU) </i> - (1h15)</li>
               </ul>
             </td>
             <tr>
               <th scope="row" class="align-middle text-nowrap">16h30-16h55</th>
-              <td class="table-danger"><b>Coffee Break</b></td>
+              <td class="table-danger"><b>Coffee Break</b> (25 min)</td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">16h55-18h10</th>
               <td class="table-success">
-                <b>Training Session</b>
+                <b>Training Session 3</b>
                 <ul>
-                  <li>16h55 - 18h10 - <b>Introduction to Arduino </b></li>
+                  <li>16h55 - 18h10 - <b>Introduction to Arduino</b>  - <i>(Thierry Legou, LPL, CNRS)</i> -(1h15)</li>
                 </ul>
               </td>
             </tr>
 
             <th scope="row" class="align-middle text-nowrap" style="width: 10%">18h10-18h30</th>
-            <td class="table-primary"><b>Short projects presentations</b>
+            <td class="table-primary"><b>Short projects presentations</b> (20 min)
             </td>
             <tr>
 
@@ -362,6 +363,8 @@
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-13h00</th>
               <td class="table-primary"><b>Project Work</b>
+                <br>
+                <i>Location: Room 507, 5th floor, Bâtiment Pédagogique</i>
                 <ul>
                   <li>09h00-09h30 - Breakfast</li>
                 </ul>
@@ -407,6 +410,8 @@
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-13h00</th>
               <td class="table-primary"><b>Project Work</b>
+                <br>
+                <i>Location: Room 507, 5th floor, Bâtiment Pédagogique</i>
                 <ul>
                   <li>09h00-09h30 - Breakfast</li>
                 </ul>
@@ -1271,14 +1276,20 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Bâtiment pédagogique ( Yellow Building / Le pavillon jaune) Timone campus </p>
+                <p>Room 507, 5th Floor, Bâtiment pédagogique ( Yellow Building / Le pavillon jaune) Timone campus </p>
                 <p><i>27 Bd Jean Moulin, 13385 Marseille</i></p>
                 <!--                <p>Faculté de Médecine, 27 Boulevard Jean Moulin, 13005 Marseille</p>-->
               </div>
 
+              <div class="chat">
+                <i class="icofont-chat"></i>
+                <h4>Contact (for any info/queries):</h4>
+                <p>Via Mattermost: <br/><a href="https://mattermost.brainhack.org/brainhack/channels/bhg24-marseille">https://mattermost.brainhack.org/brainhack/channels/bhg24-marseille</a></p>
+              </div>
+
               <div class="email">
                 <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
+                <h4>Email (in case of emergency):</h4>
                 <p>brainhack.marseille@gmail.com</p>
               </div>
             </div>
