update proj title and contact info

--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
               <div class="container my-4">
 
                 <!-- <a id="project1"> -->
-                <h3>Robustify Macapype</h3>
+                <h3>Bias correction of highly heterogeneous MRI images</h3>
                 <!-- </a> -->
                 <p>
                 </p>
@@ -1281,15 +1281,16 @@
                 <!--                <p>Faculté de Médecine, 27 Boulevard Jean Moulin, 13005 Marseille</p>-->
               </div>
 
-              <div class="chat">
+              <!-- <div class="chat">
                 <i class="icofont-chat"></i>
                 <h4>Contact (for any info/queries):</h4>
                 <p>Via Mattermost: <br/><a href="https://mattermost.brainhack.org/brainhack/channels/bhg24-marseille">https://mattermost.brainhack.org/brainhack/channels/bhg24-marseille</a></p>
-              </div>
+              </div> -->
 
               <div class="email">
                 <i class="icofont-envelope"></i>
-                <h4>Email (in case of emergency):</h4>
+                <!-- <h4>Email (in case of emergency):</h4> -->
+                <h4>Email:</h4>
                 <p>brainhack.marseille@gmail.com</p>
               </div>
             </div>
