--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
             </a>
           </div>
 
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://www.ilcb.fr/">
+              <img src="images/logos/ILCB.png" class="img-fluid" alt="" width="140">
+            </a>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="https://crmbm.univ-amu.fr/">
+              <img src="images/logos/cemerem.png" class="img-fluid" alt="" width="150">
+            </a>
+          </div>
+
         </div>
 
         <div class="d-flex align-items-center justify-content-center" data-aos="zoom-in">
@@ -122,25 +134,19 @@
 
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://neuro-marseille.org/formation/">
-              <img src="images/logos/neurosc.png" class="img-fluid" alt="" width="200">
-            </a>
-          </div>
-
-          <div class="d-flex align-items-center justify-content-center">
-            <a href="https://www.ilcb.fr/">
-              <img src="images/logos/ILCB.png" class="img-fluid" alt="" width="140">
+              <img src="images/logos/neurosc.png" class="img-fluid" alt="" width="300">
             </a>
           </div>
 
           <div class="d-flex align-items-center justify-content-center">
             <a href="https://www.univ-amu.fr/index.php/system/files/2022-08/Fiche_Laennec_2022-03-16_VF.pdf">
-              <img src="images/logos/laennec.png" class="img-fluid" alt="" width="250">
+              <img src="images/logos/Laennec.png" class="img-fluid" alt="" width="300">
             </a>
           </div>
 
           <div class="d-flex align-items-center justify-content-center">
-            <a href="https://crmbm.univ-amu.fr/">
-              <img src="images/logos/cemerem.png" class="img-fluid" alt="" width="150">
+            <a href="http://cedre.univ-amu.fr/">
+              <img src="images/logos/CEDRE.png" class="img-fluid" alt="" width="350">
             </a>
           </div>
 
@@ -301,7 +307,7 @@
               <div class="member-info">
                 <h4>Matthieu Gilson</h4>
                 <span></span>
-                <p>Junior Professor</p>
+                <p>Professor</p>
               </div>
             </div>
           </div>
@@ -313,17 +319,6 @@
                 <h4>Manuel Mercier</h4>
                 <span></span>
                 <p>Research Associate</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/LaurieMifsud.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Laurie Mifsud</h4>
-                <span></span>
-                <p>PhD student</p>
               </div>
             </div>
           </div>
@@ -346,17 +341,6 @@
                 <h4>Hugo Dary</h4>
                 <span></span>
                 <p>Research Engineer</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mt-4">
-            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team/MarieBourzeix.png" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Marie Bourzeix</h4>
-                <span></span>
-                <p>PhD student</p>
               </div>
             </div>
           </div>
@@ -405,7 +389,16 @@
             </div>
           </div>
 
-
+          <div class="col-lg-4 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/KhouloudBenzzaouia.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Khouloud Benzzaouia</h4>
+                <span></span>
+                <p>PhD student</p>
+              </div>
+            </div>
+          </div>
 
         </div>
 
