--- a/BHM_2022/BHM_2022.html
+++ b/BHM_2022/BHM_2022.html
@@ -2076,8 +2076,8 @@
           <h2>Previous Editions</h2>
         </div>
 
-        <li><a href="BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
-        <li><a href="BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
+        <li><a href="../BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
+        <li><a href="../BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
         <li><a href="https://brainhack_marseille.frama.io/ref2019/" target="_blank">Brainhack Marseille 2019</a></li>
 
       </div>
