--- a/BHM_2024/BHM_2024.html
+++ b/BHM_2024/BHM_2024.html
@@ -1617,10 +1617,10 @@ This project seeks to uncover how glial cells contribute to the rhythmic dynamic
         <div class="section-title">
           <h2>Previous Editions</h2>
         </div>
-        <li><a href="BHM_2023/BHM_2023.html" target="_blank">Brainhack Marseille 2023</a></li>
-        <li><a href="BHM_2022/BHM_2022.html" target="_blank">Brainhack Marseille 2022</a></li>
-        <li><a href="BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
-        <li><a href="BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
+        <li><a href="../BHM_2023/BHM_2023.html" target="_blank">Brainhack Marseille 2023</a></li>
+        <li><a href="../BHM_2022/BHM_2022.html" target="_blank">Brainhack Marseille 2022</a></li>
+        <li><a href="../BHM_2021/BHM_2021.html" target="_blank">Brainhack Marseille 2021</a></li>
+        <li><a href="../BHM_2020/BHM_2020.html" target="_blank">Brainhack Marseille 2020</a></li>
         <li><a href="https://brainhack_marseille.frama.io/ref2019/" target="_blank">Brainhack Marseille 2019</a></li>
 
       </div>
