--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style_teal.css" rel="stylesheet">
+  <link href="assets/css/style_aquadeep.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Arsha - v2.2.1
