update website for project submission link

--- a/index.html
+++ b/index.html
@@ -262,7 +262,22 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Project submissions will open closer to the event.</p>
+          <p>Here you will find all the informations about the event projects.</br></br>
+            If you want to <b>submit a project</b> click on the button below, fill up the form, and submit the github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize
+            this!</p>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a class="btn btn-warning btn-color"
+            href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=project&template=brainhack-project-template-2025-updated-BHM.yml"
+            target="_blank">
+            <h4>SUBMIT PROJECT</h4>
+          </a>
+        </div>
+        </br>
+        <div class="container" data-aos="fade-up">
+          <div class="section-title">
+            <p><i>Submitted projects will appear here closer to the event.</i></p>
+          </div>
         </div>
       </div>
     </section>
