add registration form link:

--- a/index.html
+++ b/index.html
@@ -213,37 +213,37 @@
 
         <div class="section-title">
           <h2>Register</h2>
-          <h5><i>Registration opens soon</i></h5>
+          <!-- <h5><i>Registration opens soon</i></h5> -->
         </div>
 
-        <!-- <div class="section-title">-->
-        <!--   <h5><i>Registration is now closed!</i></h5>-->
-        <!--   <!-- <h6><i>Deadline is 25th November...</i></h6> -->
-        <!-- </div>-->
-        <!-- <div class="d-flex justify-content-center">-->
-        <!-- <H2> The registration deadline is <font color="#FF0000"> Monday 18th November</font></H2> -->
-        <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
+        <!-- <div class="section-title"> -->
+          <!-- <h5><i>Registration is now closed!</i></h5> -->
+          <!-- <h6><i>Deadline is 25th November...</i></h6> -->
         <!-- </div> -->
-        <!-- <p align="center"> -->
-        <!-- <br> -->
-        <!-- Note that there is a <b></b>limitation of 80 people</b> on site. -->
-        <!-- Please register only if you are sure about your presence, as we do not want to waste food. -->
+        <div class="d-flex justify-content-center">
+        <H2> The registration deadline is <font color="#FF0000"> Wednesday 31st December</font></H2>
+        <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
+        </div>
+        <p align="center">
+        <br>
+        Note that there is a <b></b>limitation of 80 people</b> on site.
+        Please register only if you are sure about your presence, as we do not want to waste food.
         <!-- For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send
           an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the
             organization team</a>. -->
         <br>
-        <!-- Lunch and social event <b>are not guaranteed</b> for late registrations. -->
-        <!-- <br><br> -->
-        <!-- To register to the event, please click on the button below to fill the form. -->
-        <!-- </p> -->
+        Lunch and social event <b>are not guaranteed</b> for late registrations.
+        <br><br>
+        To register to the event, please click on the button below to fill the form.
+        </p>
 
-        <!-- <div class="d-flex justify-content-center"> -->
-        <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=MR7K9LRJPJ9K8TNX" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
-        <!-- <a class="btn btn-warning btn-color" href="https://redcap.int.univ-amu.fr/surveys/?s=TPAKFF99R3RCLANW" -->
-        <!-- title="Register now, and send the email!"> -->
-        <!-- <h4>REGISTER</h4> -->
-        <!-- </a> -->
-        <!-- </div> -->
+        <div class="d-flex justify-content-center">
+        <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=WWN874XPP3XJN7WE" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
+        <a class="btn btn-warning btn-color" href="https://redcap.int.univ-amu.fr/surveys/?s=WWN874XPP3XJN7WE"
+        title="Register now, and send the email!">
+        <h4>REGISTER</h4>
+        </a>
+        </div>
       </div>
     </section>
 
