update prelim prog info

--- a/index.html
+++ b/index.html
@@ -252,7 +252,17 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Program</h2>
-          <p>Program details will be announced. Stay tuned!</p>
+          <p>
+            The train track session will take place on the Wednesday <b>28th January</b>, and there will be two sessions (morning /afternoon)</br>
+            - The morning will be dedicated to coding, and 2 groups will be split according to coding skills (Beginner / Advanced)</br>
+            - The afternoon will be splitted , and 2 groups will be split according to interest in Open Software / Open Hardware techniques
+          </p>
+        </br>
+        <p>
+          On <b>Thursday 29th</b> and <b>Friday 30th</b> January 2026, all participants will have time to work on projects.
+        </p>
+        </br>
+        <p>Program details will be announced. Stay tuned!</p>
         </div>
       </div>
     </section>
@@ -435,7 +445,8 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Room 507, 5th Floor, Bâtiment pédagogique ( Yellow Building / Le pavillon jaune) Timone campus </p>
+                <p>Bâtiment pédagogique ( Yellow Building / Le pavillon jaune) Timone campus </p>
+                <p><a href="https://smpm.univ-amu.fr/sites/default/files/ressources_docs/PLAN-campus-timone.pdf" target="_blank">(click here to see map of AMU Timone campus)</a></p>
                 <p><i>27 Bd Jean Moulin, 13385 Marseille</i></p>
                 <!--                <p>Faculté de Médecine, 27 Boulevard Jean Moulin, 13005 Marseille</p>-->
               </div>
