add help info for projects

--- a/index.html
+++ b/index.html
@@ -283,6 +283,22 @@
             <h4>SUBMIT PROJECT</h4>
           </a>
         </div>
+      </br>
+      <div class="section-title">
+          To have an idea of the projects submitted in previous editions, you can check the following links:</br>
+          <a href="BHM_2024/BHM_2024.html#projects" target="_blank">Brainhack Marseille 2024 Projects</a>
+          </br>
+          <a href="BHM_2023/BHM_2023.html#projects" target="_blank">Brainhack Marseille 2023 Projects</a>
+          </br>
+          <a href="BHM_2022/BHM_2022.html#projects" target="_blank">Brainhack Marseille 2022 Projects</a>
+        </br>
+        </br>
+        <p>
+          You can also contact us via email if you require assistance in framing your project:
+        </br>
+          <i>brainhack.marseille@gmail.com</i>
+        </p>
+        </div>
         </br>
         <div class="container" data-aos="fade-up">
           <div class="section-title">
