--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style_aquadeep.css" rel="stylesheet">
+  <link href="assets/css/style_program_aquadeep.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Arsha - v2.2.1
@@ -217,55 +218,303 @@
         </div>
 
         <!-- <div class="section-title"> -->
-          <!-- <h5><i>Registration is now closed!</i></h5> -->
-          <!-- <h6><i>Deadline is 25th November...</i></h6> -->
+        <!-- <h5><i>Registration is now closed!</i></h5> -->
+        <!-- <h6><i>Deadline is 25th November...</i></h6> -->
         <!-- </div> -->
         <div class="d-flex justify-content-center">
-        <H2> The registration deadline is <font color="#FF0000"> Wednesday 31st December</font></H2>
-        <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
+          <H2> The registration deadline is <font color="#FF0000"> Wednesday 31st December</font>
+          </H2>
+          <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
         </div>
         <p align="center">
-        <br>
-        Note that there is a <b></b>limitation of 80 people</b> on site.
-        Please register only if you are sure about your presence, as we do not want to waste food.
-        <!-- For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send
+          <br>
+          Note that there is a <b></b>limitation of 80 people</b> on site.
+          Please register only if you are sure about your presence, as we do not want to waste food.
+          <!-- For <b>late registration</b>, you should anyway fill the form (press on the grey 'REGISTER' button) and send
           an <a href="mailto:brainhack.marseille@gmail.com" title="brainhack.marseille@gmail.com">email to the
             organization team</a>. -->
-        <br>
-        Lunch and social event <b>are not guaranteed</b> for late registrations.
-        <br><br>
-        To register to the event, please click on the button below to fill the form.
+          <br>
+          Lunch and social event <b>are not guaranteed</b> for late registrations.
+          <br><br>
+          To register to the event, please click on the button below to fill the form.
         </p>
 
         <div class="d-flex justify-content-center">
-        <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=WWN874XPP3XJN7WE" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
-        <a class="btn btn-warning btn-color" href="https://redcap.int.univ-amu.fr/surveys/?s=WWN874XPP3XJN7WE"
-        title="Register now, and send the email!">
-        <h4>REGISTER</h4>
-        </a>
+          <!-- <a class="btn btn-secondary" href="https://redcap.int.univ-amu.fr/surveys/?s=WWN874XPP3XJN7WE" title="Register now, and send the email!"><h4>REGISTER</h4></a> -->
+          <a class="btn btn-warning btn-color" href="https://redcap.int.univ-amu.fr/surveys/?s=WWN874XPP3XJN7WE"
+            title="Register now, and send the email!">
+            <h4>REGISTER</h4>
+          </a>
         </div>
       </div>
     </section>
 
-    <!-- ======= Program Section (placeholder) ======= -->
-    <section id="program" class="program">
+    <!-- ======= Program Section ======= -->
+    <section id="program" class="program section-bg">
       <div class="container" data-aos="fade-up">
+
         <div class="section-title">
           <h2>Program</h2>
           <p>
-            The train track session will take place on the Wednesday <b>28th January</b>, and there will be two sessions (morning /afternoon)</br>
-            - The morning will be dedicated to coding, and 2 groups will be split according to coding skills (Beginner / Advanced)</br>
-            - The afternoon will be splitted , and 2 groups will be split according to interest in Open Software / Open Hardware techniques
+            The train track session will take place on the Wednesday <b>28th January</b>, and there will be two sessions
+            (morning /afternoon)</br>
+            - The morning will be dedicated to coding, and 2 groups will be split according to coding skills (Beginner /
+            Advanced)</br>
+            - The afternoon will be splitted , and 2 groups will be split according to interest in Open Software / Open
+            Hardware techniques
           </p>
-        </br>
-        <p>
-          On <b>Thursday 29th</b> and <b>Friday 30th</b> January 2026, all participants will have time to work on projects.
-        </p>
-        </br>
-        <p>Program details will be announced. Stay tuned!</p>
+          </br>
+          <p>
+            On <b>Thursday 29th</b> and <b>Friday 30th</b> January 2026, all participants will have time to work on
+            projects.
+          </p>
+          </br>
+          <!-- <p>Program details will be announced. Stay tuned!</p> -->
+
+
+          <!-- WEDNESDAY - Day 1 -->
+          <div class="row mt-5">
+            <div class="col-lg-12">
+              <h3 class="program-day-title" style="color: #e76f51; margin-bottom: 25px;">
+                <i class="icofont-calendar"></i> Wednesday, January 28, 2026
+              </h3>
+
+              <div class="program-schedule">
+                <div class="time-slot" data-aos="fade-up">
+                  <div class="time-badge">9:00 - 9:30</div>
+                  <div class="event-content">
+                    <h4>Introduction to BrainHack Marseille 2026 and Welcome Breakfast!</h4>
+                    <p class="location"><i class="icofont-location-pin"></i> Location: Bâtiment Pédagogique</p>
+                  </div>
+                </div>
+
+                <div class="row mt-4">
+                  <div class="col-lg-6">
+                    <div class="track-header"
+                      style="background-color: #e9c46a; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
+                      <h5 style="margin: 0; color: #264653;">Beginner Path</h5>
+                    </div>
+
+                    <div class="time-slot beginner-path" data-aos="fade-up">
+                      <div class="time-badge">10:00 - 11:30</div>
+                      <div class="event-content">
+                        <h4>Introduction to Python programming</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Cyprien Dautrevaux (INS – INT) and
+                          Alexandre Lainé (INT)</p>
+                      </div>
+                    </div>
+
+                    <div class="time-slot beginner-path" data-aos="fade-up">
+                      <div class="time-badge">11:30 - 13:00</div>
+                      <div class="event-content">
+                        <h4>Introduction to Git and Shell</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> David Meunier (INT) or Julia Sprenger
+                          (Jülich)</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="track-header"
+                      style="background-color: #2a9d8f; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
+                      <h5 style="margin: 0; color: white;">Advanced Path</h5>
+                    </div>
+
+                    <div class="time-slot advanced-path" data-aos="fade-up">
+                      <div class="time-badge">9:30 - 11:00</div>
+                      <div class="event-content">
+                        <h4>EEG/MEG advanced analysis</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Giorgio Marinato (INT)</p>
+                      </div>
+                    </div>
+
+                    <div class="time-slot advanced-path" data-aos="fade-up">
+                      <div class="time-badge">11:00 - 12:30</div>
+                      <div class="event-content">
+                        <h4>High performance computing with Numba, CuPy and JIT</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Abolfazl Ziaeemehr (INS)</p>
+                      </div>
+                    </div>
+
+                    <div class="time-slot advanced-path" data-aos="fade-up">
+                      <div class="time-badge">12:30 - 13:00</div>
+                      <div class="event-content">
+                        <h4>Good practices in programming. A crash course for scientists.</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Maciej Jedynak (INS)</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="time-slot lunch-break" data-aos="fade-up">
+                  <div class="time-badge">13:00 - 14:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-lunch"></i> Lunch Break</h4>
+                  </div>
+                </div>
+
+                <div class="time-slot" data-aos="fade-up">
+                  <div class="time-badge">14:00 - 15:30</div>
+                  <div class="event-content">
+                    <h4>Collective Intelligence Workshop</h4>
+                  </div>
+                </div>
+
+                <div class="row mt-4">
+                  <div class="col-lg-6">
+                    <div class="track-header"
+                      style="background-color: #f4a261; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
+                      <h5 style="margin: 0; color: #264653;">Open Software Path</h5>
+                    </div>
+
+                    <div class="time-slot software-path" data-aos="fade-up">
+                      <div class="time-badge">15:30 - 16:30</div>
+                      <div class="event-content">
+                        <h4>CEDRE lecture</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Youssef Trardi (AMU)</p>
+                      </div>
+                    </div>
+
+                    <div class="time-slot software-path" data-aos="fade-up">
+                      <div class="time-badge">17:00 - 18:00</div>
+                      <div class="event-content">
+                        <h4>AdaLab</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT)</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="track-header"
+                      style="background-color: #e76f51; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
+                      <h5 style="margin: 0; color: white;">Open Hardware Path</h5>
+                    </div>
+
+                    <div class="time-slot hardware-path" data-aos="fade-up">
+                      <div class="time-badge">15:30 - 16:30</div>
+                      <div class="event-content">
+                        <h4>Raspberry Pi</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Thierry Legou (LPL, CNRS)</p>
+                      </div>
+                    </div>
+
+                    <div class="time-slot hardware-path" data-aos="fade-up">
+                      <div class="time-badge">17:00 - 18:00</div>
+                      <div class="event-content">
+                        <h4>FabLab</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Bruno Nazarian (INT, CERIMED)</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="time-slot" data-aos="fade-up">
+                  <div class="time-badge">16:30 - 17:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-coffee-cup"></i> Coffee Break</h4>
+                  </div>
+                </div>
+
+                <div class="time-slot" data-aos="fade-up">
+                  <div class="time-badge">18:00 - 18:30</div>
+                  <div class="event-content">
+                    <h4>Project Presentations</h4>
+                  </div>
+                </div>
+
+                <div class="time-slot social-event" data-aos="fade-up">
+                  <div class="time-badge">18:30 onwards</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-users-social"></i> Social Event</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- THURSDAY - Day 2 -->
+          <div class="row mt-5">
+            <div class="col-lg-12">
+              <h3 class="program-day-title" style="color: #e76f51; margin-bottom: 25px;">
+                <i class="icofont-calendar"></i> Thursday, January 29, 2026
+              </h3>
+
+              <div class="program-schedule">
+                <div class="time-slot" data-aos="fade-up">
+                  <div class="time-badge">9:00 - 9:30</div>
+                  <div class="event-content">
+                    <h4>Welcome Breakfast</h4>
+                    <p class="location"><i class="icofont-location-pin"></i> Location: Bâtiment Pédagogique</p>
+                  </div>
+                </div>
+
+                <div class="time-slot project-work" data-aos="fade-up">
+                  <div class="time-badge">9:30 - 13:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-code"></i> Projects Work</h4>
+                  </div>
+                </div>
+
+                <div class="time-slot lunch-break" data-aos="fade-up">
+                  <div class="time-badge">13:00 - 14:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-lunch"></i> Lunch Break</h4>
+                  </div>
+                </div>
+
+                <div class="time-slot project-work" data-aos="fade-up">
+                  <div class="time-badge">14:00 - 18:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-code"></i> Project Work</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- FRIDAY - Day 3 -->
+          <div class="row mt-5">
+            <div class="col-lg-12">
+              <h3 class="program-day-title" style="color: #e76f51; margin-bottom: 25px;">
+                <i class="icofont-calendar"></i> Friday, January 30, 2026
+              </h3>
+
+              <div class="program-schedule">
+                <div class="time-slot" data-aos="fade-up">
+                  <div class="time-badge">9:00 - 9:30</div>
+                  <div class="event-content">
+                    <h4>Welcome Breakfast</h4>
+                    <p class="location"><i class="icofont-location-pin"></i> Location: Bâtiment Pédagogique</p>
+                  </div>
+                </div>
+
+                <div class="time-slot project-work" data-aos="fade-up">
+                  <div class="time-badge">9:30 - 13:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-code"></i> Project Work</h4>
+                  </div>
+                </div>
+
+                <div class="time-slot lunch-break" data-aos="fade-up">
+                  <div class="time-badge">13:00 - 14:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-lunch"></i> Lunch Break</h4>
+                  </div>
+                </div>
+
+                <div class="time-slot project-work" data-aos="fade-up">
+                  <div class="time-badge">14:00 - 18:00</div>
+                  <div class="event-content">
+                    <h4><i class="icofont-code"></i> Project Work</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+
       </div>
-    </section>
+    </section><!-- End Program Section -->
 
     <!-- ======= Projects Section (placeholder) ======= -->
     <section id="projects" class="projects">
@@ -273,7 +522,9 @@
         <div class="section-title">
           <h2>Projects</h2>
           <p>Here you will find all the informations about the event projects.</br></br>
-            If you want to <b>submit a project</b> click on the button below, fill up the form, and submit the github issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize
+            If you want to <b>submit a project</b> click on the button below, fill up the form, and submit the github
+            issue. Projects can be anything you'd like to work on during the event with other people (coding, discussing
+            a procedure with coworkers, brainstorming about a new idea), as long as you're ready to minimally organize
             this!</p>
         </div>
         <div class="d-flex justify-content-center">
@@ -283,21 +534,21 @@
             <h4>SUBMIT PROJECT</h4>
           </a>
         </div>
-      </br>
-      <div class="section-title">
+        </br>
+        <div class="section-title">
           To have an idea of the projects submitted in previous editions, you can check the following links:</br>
           <a href="BHM_2024/BHM_2024.html#projects" target="_blank">Brainhack Marseille 2024 Projects</a>
           </br>
           <a href="BHM_2023/BHM_2023.html#projects" target="_blank">Brainhack Marseille 2023 Projects</a>
           </br>
           <a href="BHM_2022/BHM_2022.html#projects" target="_blank">Brainhack Marseille 2022 Projects</a>
-        </br>
-        </br>
-        <p>
-          You can also contact us via email if you require assistance in framing your project:
-        </br>
-          <i>brainhack.marseille@gmail.com</i>
-        </p>
+          </br>
+          </br>
+          <p>
+            You can also contact us via email if you require assistance in framing your project:
+            </br>
+            <i>brainhack.marseille@gmail.com</i>
+          </p>
         </div>
         </br>
         <div class="container" data-aos="fade-up">
@@ -462,7 +713,8 @@
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
                 <p>Bâtiment pédagogique ( Yellow Building / Le pavillon jaune) Timone campus </p>
-                <p><a href="https://smpm.univ-amu.fr/sites/default/files/ressources_docs/PLAN-campus-timone.pdf" target="_blank">(click here to see map of AMU Timone campus)</a></p>
+                <p><a href="https://smpm.univ-amu.fr/sites/default/files/ressources_docs/PLAN-campus-timone.pdf"
+                    target="_blank">(click here to see map of AMU Timone campus)</a></p>
                 <p><i>27 Bd Jean Moulin, 13385 Marseille</i></p>
                 <!--                <p>Faculté de Médecine, 27 Boulevard Jean Moulin, 13005 Marseille</p>-->
               </div>
