--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
               <div class="program-schedule">
                 <div class="time-slot" data-aos="fade-up">
-                  <div class="time-badge">9:00 - 9:30</div>
+                  <div class="time-badge">9:00 - 10:00</div>
                   <div class="event-content">
                     <h4>Introduction to BrainHack Marseille 2026 and Welcome Breakfast!</h4>
                     <p class="location"><i class="icofont-location-pin"></i> Location: Bâtiment Pédagogique</p>
@@ -296,7 +296,7 @@
                     </div>
 
                     <div class="time-slot beginner-path" data-aos="fade-up">
-                      <div class="time-badge">10:00 - 11:30</div>
+                      <div class="time-badge">10:00 - 12:00</div>
                       <div class="event-content">
                         <h4>Introduction to Python programming</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Cyprien Dautrevaux (INS – INT) and
@@ -305,7 +305,7 @@
                     </div>
 
                     <div class="time-slot beginner-path" data-aos="fade-up">
-                      <div class="time-badge">11:30 - 13:00</div>
+                      <div class="time-badge">12:00 - 13:00</div>
                       <div class="event-content">
                         <h4>Introduction to Git and Shell</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> David Meunier (INT) or Julia Sprenger
@@ -321,7 +321,7 @@
                     </div>
 
                     <div class="time-slot advanced-path" data-aos="fade-up">
-                      <div class="time-badge">9:30 - 11:00</div>
+                      <div class="time-badge">10:00 - 11:00</div>
                       <div class="event-content">
                         <h4>EEG/MEG advanced analysis</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Giorgio Marinato (INT)</p>
@@ -329,7 +329,7 @@
                     </div>
 
                     <div class="time-slot advanced-path" data-aos="fade-up">
-                      <div class="time-badge">11:00 - 12:30</div>
+                      <div class="time-badge">11:00 - 12:00</div>
                       <div class="event-content">
                         <h4>High performance computing with Numba, CuPy and JIT</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Abolfazl Ziaeemehr (INS)</p>
@@ -337,7 +337,7 @@
                     </div>
 
                     <div class="time-slot advanced-path" data-aos="fade-up">
-                      <div class="time-badge">12:30 - 13:00</div>
+                      <div class="time-badge">12:00 - 13:00</div>
                       <div class="event-content">
                         <h4>Good practices in programming. A crash course for scientists.</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Maciej Jedynak (INS)</p>
@@ -346,7 +346,7 @@
                   </div>
                 </div>
 
-                <div class="time-slot lunch-break" data-aos="fade-up">
+                <div class="time-slot" data-aos="fade-up">
                   <div class="time-badge">13:00 - 14:00</div>
                   <div class="event-content">
                     <h4><i class="icofont-lunch"></i> Lunch Break</h4>
@@ -354,7 +354,7 @@
                 </div>
 
                 <div class="time-slot" data-aos="fade-up">
-                  <div class="time-badge">14:00 - 15:30</div>
+                  <div class="time-badge">14:00 - 15:00</div>
                   <div class="event-content">
                     <h4>Collective Intelligence Workshop</h4>
                   </div>
@@ -368,18 +368,10 @@
                     </div>
 
                     <div class="time-slot software-path" data-aos="fade-up">
-                      <div class="time-badge">15:30 - 16:30</div>
+                      <div class="time-badge">15:00 - 16:30</div>
                       <div class="event-content">
                         <h4>CEDRE lecture</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Youssef Trardi (AMU)</p>
-                      </div>
-                    </div>
-
-                    <div class="time-slot software-path" data-aos="fade-up">
-                      <div class="time-badge">17:00 - 18:00</div>
-                      <div class="event-content">
-                        <h4>AdaLab</h4>
-                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT)</p>
                       </div>
                     </div>
                   </div>
@@ -391,18 +383,10 @@
                     </div>
 
                     <div class="time-slot hardware-path" data-aos="fade-up">
-                      <div class="time-badge">15:30 - 16:30</div>
+                      <div class="time-badge">15:00 - 16:30</div>
                       <div class="event-content">
                         <h4>Raspberry Pi</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Thierry Legou (LPL, CNRS)</p>
-                      </div>
-                    </div>
-
-                    <div class="time-slot hardware-path" data-aos="fade-up">
-                      <div class="time-badge">17:00 - 18:00</div>
-                      <div class="event-content">
-                        <h4>FabLab</h4>
-                        <p class="speaker"><i class="icofont-user-alt-3"></i> Bruno Nazarian (INT, CERIMED)</p>
                       </div>
                     </div>
                   </div>
@@ -411,7 +395,29 @@
                 <div class="time-slot" data-aos="fade-up">
                   <div class="time-badge">16:30 - 17:00</div>
                   <div class="event-content">
-                    <h4><i class="icofont-coffee-cup"></i> Coffee Break</h4>
+                      <h4><i class="icofont-coffee-cup"></i> Coffee Break</h4>
+                  </div>
+                </div>
+
+                <div class="row mt-4">
+                  <div class="col-lg-6">
+                    <div class="time-slot software-path" data-aos="fade-up">
+                      <div class="time-badge">17:00 - 18:00</div>
+                      <div class="event-content">
+                        <h4>AdaLab</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT)</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="time-slot hardware-path" data-aos="fade-up">
+                      <div class="time-badge">17:00 - 18:00</div>
+                      <div class="event-content">
+                        <h4>FabLab</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Bruno Nazarian (INT, CERIMED)</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
