--- a/index.html
+++ b/index.html
@@ -347,16 +347,16 @@
                 </div>
 
                 <div class="time-slot" data-aos="fade-up">
-                  <div class="time-badge">13:00 - 14:00</div>
+                  <div class="time-badge">13:00 - 14:30</div>
                   <div class="event-content">
-                    <h4><i class="icofont-lunch"></i> Lunch Break</h4>
+                    <h4><i class="icofont-lunch"></i> Lunch Break and Collective Intelligence Workshop </h4>
                   </div>
                 </div>
 
                 <div class="time-slot" data-aos="fade-up">
-                  <div class="time-badge">14:00 - 15:00</div>
+                  <div class="time-badge">14:30 - 15:00</div>
                   <div class="event-content">
-                    <h4>Collective Intelligence Workshop</h4>
+                    <h4>Project Presentations</h4>
                   </div>
                 </div>
 
@@ -404,8 +404,8 @@
                     <div class="time-slot software-path" data-aos="fade-up">
                       <div class="time-badge">17:00 - 18:00</div>
                       <div class="event-content">
-                        <h4>AdaLab</h4>
-                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT)</p>
+                        <h4>AdaLab and DataForGood</h4>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT) and Nicolas Rochet</p>
                       </div>
                     </div>
                   </div>
@@ -418,13 +418,6 @@
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Bruno Nazarian (INT, CERIMED)</p>
                       </div>
                     </div>
-                  </div>
-                </div>
-
-                <div class="time-slot" data-aos="fade-up">
-                  <div class="time-badge">18:00 - 18:30</div>
-                  <div class="event-content">
-                    <h4>Project Presentations</h4>
                   </div>
                 </div>
 
