update talk title

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                     <div class="time-slot hardware-path" data-aos="fade-up">
                       <div class="time-badge">15:00 - 16:30</div>
                       <div class="event-content">
-                        <h4>Raspberry Pi</h4>
+                        <h4>Raspberry Pi Pico</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Thierry Legou (LPL, CNRS)</p>
                       </div>
                     </div>
