--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <!-- <h6><i>Deadline is 25th November...</i></h6> -->
         <!-- </div> -->
         <div class="d-flex justify-content-center">
-          <H2> The registration deadline is <span class="deadline-highlight">Wednesday 31st December</span></H2>
+          <H2> The registration deadline is <span class="deadline-highlight">Friday 16th January</span></H2>
           <!-- <H2> <b>Sorry :-( Registration is now <font color="#FF0000">CLOSED</font>.</b></H2> -->
         </div>
         <p align="center">
