Rapid Program Update

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     <div class="time-slot beginner-path" data-aos="fade-up">
                       <div class="time-badge">12:00 - 13:00</div>
                       <div class="event-content">
-                        <h4>Introduction to Git and Shell</h4>
+                        <h4>Introduction to Git/Github</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> David Meunier (INT) or Julia Sprenger
                         </p>
                       </div>
@@ -434,7 +434,7 @@
                     <div class="time-slot advanced-path" data-aos="fade-up">
                       <div class="time-badge">10:00 - 11:00</div>
                       <div class="event-content">
-                        <h4>EEG/MEG advanced analysis</h4>
+                        <h4>MEG advanced analysis</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Giorgio Marinato (INT)</p>
                       </div>
                     </div>
@@ -482,7 +482,7 @@
                     <div class="time-slot software-path" data-aos="fade-up">
                       <div class="time-badge">15:00 - 16:30</div>
                       <div class="event-content">
-                        <h4>CEDRE lecture</h4>
+                        <h4>CEDRE AI lecture</h4>
                         <p class="speaker"><i class="icofont-user-alt-3"></i> Youssef Trardi (AMU)</p>
                       </div>
                     </div>
@@ -517,7 +517,7 @@
                       <div class="time-badge">17:00 - 18:00</div>
                       <div class="event-content">
                         <h4>AdaLab and DataForGood</h4>
-                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT) and Nicolas Rochet</p>
+                        <p class="speaker"><i class="icofont-user-alt-3"></i> Elodie Giorla (INT)</p>
                       </div>
                     </div>
                   </div>
